@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage1_target.py,v 1.11 2005/11/07 16:25:06 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage1_target.py,v 1.12 2005/11/07 20:26:37 rocket Exp $
 
 """
 Builder class for a stage1 installation tarball build.
@@ -47,11 +47,11 @@ class stage1_target(generic_stage_target):
 		self.settings["CXXFLAGS"]=list_to_string(self.settings["cxxflags"])
 
         def override_ldflags(self):
-                if os.environ.has_key("LDFLAGS"):
-                    self.settings["LDFLAGS"] = os.environ["LDFLAGS"]
-                if self.settings.has_key("ldflags"):
-                    self.settings["LDFLAGS"]=list_to_string(self.settings["ldflags"])
+	    if os.environ.has_key("LDFLAGS"):
+		self.settings["LDFLAGS"] = os.environ["LDFLAGS"]
+	    if self.settings.has_key("ldflags"):
+		self.settings["LDFLAGS"]=list_to_string(self.settings["ldflags"])
 
-def reg(foo):
+def register(foo):
 	foo.update({"stage1":stage1_target})
 	return foo
